[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/effect/level_windy_leaf_particle_controller.gd" type="Script" id=1]

[node name="LeafSpriteController" type="Node2D"]
script = ExtResource( 1 )

[node name="TimerController" type="Timer" parent="."]
[connection signal="timeout" from="TimerController" to="." method="_on_TimerController_timeout"]
